r6 (27. 05. 2021):
Added French translation
Added Brazilian Portuguese translation
Added option "Show Tracker Background"
Added option "Show 1 Icon in Tracker"
Added option "Equipment Format"
Added tracker "Enemy Count"
No Mercy: Fixed an issue where trackers for centrifuges did not show up
No Mercy: Fixed issues with elevator tracker
No Mercy: Achievement "Nyctophobia" will blink green when unlocked
Birth of Sky: Achievement "1... 2... 3... JUMP!" will blink green when unlocked
Undercover: Added more trackers

r5 (18. 05. 2021):
Added a pager timer tracker
Added more trackers
Made some trackers accurate on host. Client will see trackers accurate when host have EHI installed
Election Day D2 Plan C: Fixed a crash when hacking timer hit zero
Cook Off/Rats Day 1: When methlab explodes the cooking chance tracker is removed
Rats Day 1: Fixed an issue where 2 van trackers are visible when methlab explodes
Rats Day 1: Added tracker for achievement "Full Measure". This tracker also works when you drop-in
Birth of Sky: Added trackers for achievement "Mellon" and thermite. "Mellon" achievement tracker also works when you drop-in
Border Crystals: Added tracker for achievement "Heister Cocinero". This tracker also works when you drop-in
Breakfast in Tijuana: Reworked achievement tracker "Paid in Full" to also work when you drop-in
Dragon Heist: Added tracker for achievement "All the Gold in Chinatown". This tracker also works when you drop-in
The Bomb: Dockyard: Added trackers for achievement "High Times" and methlab
The Alesso Heist: Achievement "Even Steven" will blink green when close to unlock
Slaughterhouse Heist: Achievement "But How?" will blink green when close to unlock
Hotline Miami Day 1: Added trackers for methlab
Hotline Miami Day 2: Fixed an issue where "Phew!" achievement did not mark itself as complete or failed when achieved or failed
Watchdogs Day 1: Improved car lootdrop tracker
Reworked code and reduced a lot of conditions